[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 1 )

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 980.0
margin_bottom = 1820.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/separation = 50
alignment = 1

[node name="Title" type="Label" parent="MainMenu"]
margin_top = 548.0
margin_right = 880.0
margin_bottom = 658.0
custom_fonts/font = ExtResource( 2 )
text = "Godot Rubik's Cube"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="MainMenu"]
margin_left = 40.0
margin_top = 708.0
margin_right = 840.0
margin_bottom = 716.0
rect_min_size = Vector2( 800, 0 )
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
margin_left = 217.0
margin_top = 766.0
margin_right = 663.0
margin_bottom = 1172.0
size_flags_horizontal = 6
size_flags_vertical = 4
custom_constants/separation = 20
alignment = 1

[node name="ButtonSettings" type="Button" parent="MainMenu/VBoxContainer"]
margin_right = 446.0
margin_bottom = 122.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"

[node name="ButtonScramble" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 142.0
margin_right = 446.0
margin_bottom = 264.0
custom_fonts/font = ExtResource( 2 )
text = "Scramble"

[node name="ButtonReset" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 284.0
margin_right = 446.0
margin_bottom = 406.0
custom_fonts/font = ExtResource( 2 )
text = "Reset Cube"

[node name="SettingsMenu" type="VBoxContainer" parent="."]
visible = false
margin_left = 100.0
margin_top = 602.0
margin_right = 980.0
margin_bottom = 1318.0
size_flags_horizontal = 5
size_flags_vertical = 6
custom_constants/separation = 50
alignment = 1

[node name="LabelSettings" type="Label" parent="SettingsMenu"]
margin_right = 1720.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu"]
margin_left = 461.0
margin_top = 298.0
margin_right = 1258.0
margin_bottom = 712.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 20
alignment = 1

[node name="ButtonSize" type="Button" parent="SettingsMenu/VBoxContainer"]
margin_top = 292.0
margin_right = 797.0
margin_bottom = 414.0
custom_fonts/font = ExtResource( 2 )
text = "Cube Size"

[node name="ButtonTextures" type="CheckButton" parent="SettingsMenu/VBoxContainer"]
margin_right = 797.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 2 )
text = "Show Textures"

[node name="ButtonOrientation" type="CheckButton" parent="SettingsMenu/VBoxContainer"]
margin_top = 146.0
margin_right = 797.0
margin_bottom = 272.0
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Solve orientation"

[node name="ButtonSettingsBack" type="Button" parent="SettingsMenu/VBoxContainer"]
margin_top = 292.0
margin_right = 797.0
margin_bottom = 414.0
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="SizeMenu" type="VBoxContainer" parent="."]
visible = false
margin_left = 100.0
margin_top = 606.0
margin_right = 980.0
margin_bottom = 1314.0
size_flags_horizontal = 5
size_flags_vertical = 6
custom_constants/separation = 50
alignment = 1

[node name="LabelSize" type="Label" parent="SizeMenu"]
margin_right = 1720.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 2 )
text = "Cube Size"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SizeMenu"]
margin_left = 710.0
margin_top = 302.0
margin_right = 1010.0
margin_bottom = 708.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 20
alignment = 1

[node name="ButtonSize2" type="Button" parent="SizeMenu/VBoxContainer"]
margin_right = 300.0
margin_bottom = 122.0
custom_fonts/font = ExtResource( 2 )
text = "2"

[node name="ButtonSize3" type="Button" parent="SizeMenu/VBoxContainer"]
margin_top = 142.0
margin_right = 300.0
margin_bottom = 264.0
custom_fonts/font = ExtResource( 2 )
text = "3"

[node name="ButtonSize4" type="Button" parent="SizeMenu/VBoxContainer"]
margin_top = 284.0
margin_right = 300.0
margin_bottom = 406.0
custom_fonts/font = ExtResource( 2 )
text = "4"

[node name="ButtonSizeBack" type="Button" parent="SizeMenu/VBoxContainer"]
margin_top = 284.0
margin_right = 300.0
margin_bottom = 406.0
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="LabelTime" type="Label" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 980.0
margin_bottom = 210.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Time: 00:00.00"

[node name="ButtonMenu" type="TextureButton" parent="."]
margin_left = 780.0
margin_top = 1620.0
margin_right = 980.0
margin_bottom = 1820.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource( 3 )
expand = true

[connection signal="pressed" from="MainMenu/VBoxContainer/ButtonSettings" to="." method="_on_ButtonSettings_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/ButtonScramble" to="." method="_on_ButtonScramble_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/ButtonReset" to="." method="_on_ButtonReset_pressed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/ButtonSize" to="." method="_on_ButtonSize_pressed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/ButtonTextures" to="." method="_on_ButtonTextures_pressed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/ButtonOrientation" to="." method="_on_ButtonOrientation_pressed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/ButtonSettingsBack" to="." method="_on_ButtonSettingsBack_pressed"]
[connection signal="pressed" from="SizeMenu/VBoxContainer/ButtonSize2" to="." method="_on_ButtonSize2_pressed"]
[connection signal="pressed" from="SizeMenu/VBoxContainer/ButtonSize3" to="." method="_on_ButtonSize3_pressed"]
[connection signal="pressed" from="SizeMenu/VBoxContainer/ButtonSize4" to="." method="_on_ButtonSize4_pressed"]
[connection signal="pressed" from="SizeMenu/VBoxContainer/ButtonSizeBack" to="." method="_on_ButtonSizeBack_pressed"]
[connection signal="pressed" from="ButtonMenu" to="." method="_on_ButtonMenu_pressed"]
